método para validación de token expirado

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 package="com.ekuasoft.cvs_ec_app">
+
+    <!-- GPS -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <!-- PARA SENSAR TOKEN-->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+
     <application
         android:label="D-One"
         android:name="${applicationName}"
