--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  intl_phone_number_input: ^0.7.4
+  ai_barcode_scanner: ^3.4.1
   url_launcher: ^6.3.1
   device_info_plus: ^10.1.2
   cron: ^0.6.1
