--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  custom_refresh_indicator: ^4.0.1
+  device_imei: ^0.0.4+2
   infinite_scroll_pagination: ^4.1.0
   webview_flutter: ^4.2.1
   intl_phone_number_input: ^0.7.4
