--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@ package="com.ekuasoft.cvs_ec_app">
     <!-- GPS -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" /> --> <!-- Descomentar cuando estemos con la parte de entrega a domicilio -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <!-- PARA SENSAR TOKEN-->
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
@@ -18,6 +20,9 @@ package="com.ekuasoft.cvs_ec_app">
         android:label="D-One"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+        <meta-data android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyBNRevgaESKXBVcIFnEPVBQcTc1i_yqE6k"/>
 
         <activity
             android:name="com.yalantis.ucrop.UCropActivity"
