--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  google_polyline_algorithm: ^3.1.0
+  google_maps_flutter: ^2.10.0
+  secure_application: ^4.0.1
   custom_refresh_indicator: ^4.0.1
   device_imei: ^0.0.4+2
   infinite_scroll_pagination: ^4.1.0
