--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  calendar_date_picker2: ^1.1.8
   flutter_multi_formatter: ^2.13.0
   google_polyline_algorithm: ^3.1.0
   google_maps_flutter: ^2.10.0
