--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,28 +85,23 @@ dependencies:
   no_screenshot: ^0.0.1+6
   local_auth: ^2.2.0
   fluttertoast: ^8.2.6
-  flutter_launcher_icons: ^0.11.0
+  flutter_launcher_icons: ^0.14.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
+flutter_launcher_icons:
+  android: "logo_app"
+  ios: true
+  image_path: "assets/icon/logo_app.png"
+  min_sdk_android: 16
+  adaptive_icon_background: "assets/icon/logo_app.png"
 
 flutter:
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
+  generate: true
   assets:
     - assets/ilustraciones_medium_figma/
     - assets/gifs/
