--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,8 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6  
   bloc: ^8.1.4
-  connectivity_plus: ^6.0.3
+  internet_connection_checker: ^1.0.0+1
+  connectivity_plus: ^5.0.2
   permission_handler: ^11.3.1
   card_swiper: ^3.0.1
   http: ^1.2.1
